--- a/website/newsletter/166/index.mdx
+++ b/website/newsletter/166/index.mdx
@@ -34,49 +34,39 @@ A new kind of dev tool for React just opened its beta. See your JSX and styles i
 
 ## ⚛️ React {#react}
 
-- https://x.com/zenorocha/status/1732429176248959454?s=20
-- [First alphas of Storybook 8](https://github.com/storybookjs/storybook/releases)
-- [Million.js 3.0](https://million.dev/blog/million-3)
+- 📦 [First alpha of Storybook 8](https://github.com/storybookjs/storybook/releases) brings some improvements for Next.js support and React implementation
+- 📦 [Million.js 3.0](https://million.dev/blog/million-3) brings faster build time and faster runtime
 - [Parallel routes and default.js in Next.js](https://x.com/asidorenko_/status/1732846254420308362) good and short video introduction (but X only)
-- [Next.js - Updated Server Actions docs](https://x.com/delba_oliveira/status/1733169596491018269?s=20)(https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)
-- https://x.com/aryan__deora/status/1733164876170764409?s=20
-- [v0 can now render charts](https://x.com/rauchg/status/1733002334043865425?s=20)
-- https://x.com/dai_shi/status/1733470466416037960?s=20
-- https://x.com/HookForm/status/1733594239056158836?s=20
-- [Simple Form 1.0](https://x.com/BHolmesDev/status/1734057284966195655?s=20) New form library just dropped.
-- [Next.js React Foundations updated with App Router and Server Components](We updated the Next.js Foundations course to include the App Router and Server Components.)
-- [Dan Abramov: A Chain Reaction](https://overreacted.io/a-chain-reaction/)
+- 📖 [Next.js - Updated Server Actions docs](https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations) learn about server actions - asynchronous functions that are executed on the server.
+- 🐦 [Nice visualization of fine-grained reactivity in TanStack Router](https://x.com/aryan__deora/status/1733164876170764409)
+- 👀 [v0 can now render charts](https://x.com/rauchg/status/1733002334043865425)
+- 📜 [Introducing Waku - The minimal React Framework that enhances React Server Component usage](https://waku.gg/blog/introducing-waku) - 📦 [Waku 0.18.0](https://www.npmjs.com/package/waku)
+- 📦 [react-hook-form 7.49.0](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.49.0) adds reactive errors prop for useForm and react-server bundle
+- 📦 [Simple Form 1.0](https://github.com/bholmesdev/simple-stack/tree/main/packages/form) New form library just dropped 🐦 ([Demo](https://x.com/BHolmesDev/status/1732950888996573542))
+- 📖 [Next.js React Foundations updated with App Router and Server Components](https://nextjs.org/learn/react-foundations)
+- 📜 [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov offers us a great lesson in storytelling through the implementation of a recursive function that translates JSX into HTML elements.
+- 📜 [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo)
+- 📜 [Best Practices using React Server Components with a Headless CMS](https://www.cosmicjs.com/blog/best-practices-using-react-server-components-with-a-headless-cms)
+- 📜 [Polymorphism in React: 2 patterns you must know](https://www.bekk.christmas/post/2023/01/polymorphism-in-react)
+- 📜 [Lexical state updates](https://dio.la/article/lexical-state-updates)
+- 📦 [Next-Admin 3.0 - App router support](https://github.com/premieroctet/next-admin/releases/tag/%40premieroctet%2Fnext-admin%403.0.0) brings support for App Router
+- 📦 [React DevTools 5.0 - New React-Forget badge](https://github.com/facebook/react/pull/27759): I gave it a try and we can see React-Forget is already used in production on Instagram ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
+- 📦 [Epic Stack - Client Hints - Eliminate a flash of incorrect content by using client hints](https://github.com/epicweb-dev/client-hints)
+- 📜 [Remix - Submit a form without overwriting existing parameters](https://www.jacobparis.com/content/existing-params)
+- 📜 [Expose Remix Routes as API Endpoints](https://sergiodxa.com/tutorials/expose-remix-routes-as-api-endpoints)
+- 📦 [Fuse.js: The opinionated framework for creating typesafe data layers](https://stellate.co/blog/announcing-fuse-js)
+- 📜 [Next.js 14: Layouts vs Templates](https://www.builder.io/blog/nextjs-14-layouts-templates): templates are remounted on navigation and reset their state.
+- 📜 [The anatomy of shadcn/ui](https://manupa.dev/blog/anatomy-of-shadcn-ui)
+- 📦 [AuthKit - The world's best login box powered by WorkOS and Radix](https://www.authkit.com/)
+- 🐦 [React hydration error diff demo](https://twitter.com/samijaber_/status/1734332721634099282)
+- 🐦 [Next.js moving away from extending fetch, adding new APIs like `noStore()`](https://twitter.com/leeerob/status/1733154383410684148)
+- 🐦 [Tanner Linsley about React concurrent model vs reactive model](https://twitter.com/tannerlinsley/status/1732474127712481371): difficult to use both models at once. Tanner migrated the upcoming TanStack Router to a reactive model ([ref](https://twitter.com/tannerlinsley/status/1732906060795846847)).
+- 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
 
 ### Seb
 
 - 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
-- [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov nous propose une belle leçon de storytelling à travers l'implémentation d'une fonction récursive qui traduit le JSX en éléments HTML.
-- [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo)
-- [Best Practices using React Server Components with a Headless CMS](https://www.cosmicjs.com/blog/best-practices-using-react-server-components-with-a-headless-cms)
-- [Introducing StyleX](https://stylexjs.com/blog/introducing-stylex)
-- [Polymorphism in React: 2 patterns you must know](https://www.bekk.christmas/post/2023/01/polymorphism-in-react)
-- [Lexical state updates](https://dio.la/article/lexical-state-updates)
-- [Next-Admin 3.0 - App router support](https://github.com/premieroctet/next-admin/releases/tag/%40premieroctet%2Fnext-admin%403.0.0)
-- [React DevTools 5.0 - New React-Forget badge](https://github.com/facebook/react/pull/27759): I gave it a try and we can see React-Forget is already used in production on Instagram ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
-- [Epic Stack - Client Hints - Eliminate a flash of incorrect content by using client hints](https://github.com/epicweb-dev/client-hints)
-- [Introducing Waku - The minimal React Framework that enhances React Server Component usage](https://waku.gg/blog/introducing-waku) - Waku 0.18 - https://waku.gg/ - https://twitter.com/dai_shi/status/1734585396703740017
-- [Remix - Submit a form without overwriting existing parameters](https://www.jacobparis.com/content/existing-params)
-- [Expose Remix Routes as API Endpoints](https://sergiodxa.com/tutorials/expose-remix-routes-as-api-endpoints)
-- [Million 3.0](https://million.dev/blog/million-3)
-- [Fuse.js: The opinionated framework for creating typesafe data layers](https://stellate.co/blog/announcing-fuse-js)
-- [Next.js 14: Layouts vs Templates](https://www.builder.io/blog/nextjs-14-layouts-templates): templates are remounted on navigation and reset their state.
-- [The anatomy of shadcn/ui](https://manupa.dev/blog/anatomy-of-shadcn-ui)
-- [AuthKit - The world's best login box powered by WorkOS and Radix](https://www.authkit.com/)
-- [Next.js foundations course - Now includes App Router and Server Components](https://nextjs.org/learn/react-foundations)
-- React hydration error diff demo: https://twitter.com/samijaber_/status/1734332721634099282
-- [Next.js moving away from extending fetch, adding new APIs like `noStore()`](https://twitter.com/leeerob/status/1733154383410684148)
-- [Tanner Linsley about React concurrent model vs reactive model](https://twitter.com/tannerlinsley/status/1732474127712481371): difficult to use both models at once. Tanner migrated the upcoming TanStack Router to a reactive model ([ref](https://twitter.com/tannerlinsley/status/1732906060795846847)).
-
-### Probably not
-
-- [WebStorm 2023.3](https://blog.jetbrains.com/webstorm/2023/12/webstorm-2023-3/#improved_angular_support) with minor improvements for React development
-
-- 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
+- [Introducing StyleX](https://stylexjs.com/blog/introducing-stylex) - was in the last issue already?
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -100,7 +90,7 @@ Offers industry-standard solutions for critical project aspects like **authentic
 
 ## 📱 React-Native {#react-native}
 
-[![React Native 0.73, Expo SDK 50 beta, Expo Router v3 beta](/emails/issues/166/rnheader.jpg)]
+![React Native 0.73, Expo SDK 50 beta, Expo Router v3 beta](/emails/issues/166/rnheader.jpg)
 
 - 📦 [React Native 0.73 released](https://reactnative.dev/blog/2023/12/06/0.73-debugging-improvements-stable-symlinks) with a new debugger intended to replace Flipper (see updated [docs](https://reactnative.dev/docs/debugging)), stable Symlink support in Metro (important in Monorepos) and a new Kotlin template for Android (+ Android 14 support).
 - 📦 [Expo SDK 50 beta is now available](https://blog.expo.dev/expo-sdk-50-beta-is-now-available-8e6c74e4e13d) with a new Expo Dev Tools Plugin API, a complete rewrite of `expo-sqlite`, improved `expo-camera`, a new library to figure out compatibility between a JS bundle and a particular native build (`@expo/fingerprint`), `expo-updates` hooks API, and much more.
